<resources>
    <string name="app_name">Lab6-PPM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="library">Your Library</string>
    <string name="reggaeton">Reggaeton</string>
    <string name="y_library">Your Library</string>
    <string name="recent">Most recent</string>
    <string name="liked">Liked Songs</string>
    <string name="nombre">Diego Morales</string>
    <string name="goodmorning">Good Morning,</string>
    <string name="generos">Your Top Genres</string>
    <string name="rock">Rock</string>
    <string name="electro">Electrónica</string>
    <string name="pop">Pop</string>
</resources>