<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".FirstFragment">

    <ImageView
        android:id="@+id/add"
        android:layout_width="@dimen/width_icons3"
        android:layout_height="@dimen/height_icons3"
        android:layout_marginTop="@dimen/margintop_icons"
        android:layout_marginEnd="@dimen/margintop_icons2"
        android:clickable="true"
        android:src="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/width_icons3"
        android:layout_height="@dimen/height_icons3"
        android:layout_marginTop="@dimen/margintop_icons"
        android:layout_marginEnd="@dimen/margintop_icons2"
        android:src="@drawable/ic_search"
        app:layout_constraintEnd_toStartOf="@+id/add"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/width_height_user"
        android:layout_height="@dimen/width_height_user"
        android:layout_marginStart="@dimen/marginstart_user"
        android:layout_marginTop="@dimen/margintop_icons"
        android:src="@drawable/ic_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/width_constraint"
        android:layout_height="@dimen/height_constraint"
        android:layout_marginTop="@dimen/margintop_constraint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="@dimen/width_icons3"
            android:layout_height="@dimen/height_icons3"
            android:layout_marginStart="@dimen/margintop_cuadros2"
            android:layout_marginTop="@dimen/margintop_icons2"
            android:src="@drawable/ic_arrpws"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="@dimen/dimen_favs"
            android:layout_height="@dimen/dimen_favs"
            android:layout_marginStart="@dimen/marginstart_cuadros2"
            android:layout_marginTop="@dimen/margintop_icons2"
            android:background="@drawable/gradient"
            android:padding="@dimen/padding_favs"
            android:src="@drawable/ic__favorite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginstart_cuadros2"
            android:layout_marginTop="@dimen/margintop_likedsongs"
            android:text="@string/liked"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/songs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginstart_cuadros1"
            android:layout_marginTop="@dimen/margintop_icons2"
            android:text="@string/recent"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginstart_cuadros2"
        android:layout_marginTop="@dimen/margintop_icons"
        android:text="@string/y_library"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/txt_grande"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>